objects/SBQQ__Quote__c/fields/Bursting_Products_3__c.field-meta.xml
<CustomField>
    <fullName>Bursting_Products_3__c</fullName>
    <description>Select &quot;Bursting Products #3“ that are provided at no charge for the &quot;Bursting Period #3&quot; and enter zero dollar line item entry in the Quote Line Items for each product</description>
    <inlineHelpText>Select &quot;Bursting Products #3“ that are provided at no charge for the &quot;Bursting Period #3&quot; and enter zero dollar line item entry in the Quote Line Items for each product</inlineHelpText>
    <label>Bursting Products #3</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tanium Core</fullName>
            </value>
            <value>
                <fullName>Tanium Security Suite</fullName>
            </value>
            <value>
                <fullName>Tanium Threat Response</fullName>
            </value>
            <value>
                <fullName>Tanium Comply</fullName>
            </value>
            <value>
                <fullName>Tanium IM</fullName>
            </value>
            <value>
                <fullName>Tanium Protect</fullName>
            </value>
            <value>
                <fullName>Tanium Discover</fullName>
            </value>
            <value>
                <fullName>Tanium Patch</fullName>
            </value>
            <value>
                <fullName>Tanium Training</fullName>
            </value>
            <value>
                <fullName>Tanium Premium Support</fullName>
            </value>
            <value>
                <fullName>Tanium Trace</fullName>
            </value>
            <value>
                <fullName>IR</fullName>
            </value>
            <value>
                <fullName>IOC Detect</fullName>
            </value>
            <value>
                <fullName>All Products</fullName>
            </value>
            <value>
                <fullName>Tanium Asset</fullName>
            </value>
            <value>
                <fullName>Deploy</fullName>
                <label>Tanium Deploy</label>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Tanium Map</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>