objects/SBQQ__Quote__c/fields/BurstingCount__c.field-meta.xml
<CustomField>
    <fullName>BurstingCount__c</fullName>
    <inlineHelpText>Checked if there is any bursting product on the quote.</inlineHelpText>
    <label>Bursting Count</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Product_Promotion__c</field>
        <operation>equals</operation>
        <value>a0V7V00000J6Fnt</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>