objects/SBQQ__Quote__c/fields/Business_Motion__c.field-meta.xml
<CustomField>
    <fullName>Business_Motion__c</fullName>
    <formula>IF ( INCLUDES (  SBQQ__Partner__r.Partner_Type__c, &quot;Distributor&quot; ), &quot;Distributor; &quot;,null) &amp;
 IF ( INCLUDES ( SBQQ__Partner__r.Business_Motion__c , &quot;Distribute&quot; ), &quot;Distribute&quot;,null)</formula>
    <label>Business Motion</label>
    <type>Text</type>
</CustomField>