objects/SBQQ__Quote__c/fields/Business_Motion_Oppty__c.field-meta.xml
<CustomField>
    <fullName>Business_Motion_Oppty__c</fullName>
    <formula>TEXT(SBQQ__Opportunity2__r.Business_Motion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Motion Oppty</label>
    <type>Text</type>
</CustomField>