objects/SBQQ__Quote__c/fields/Bypass_Partner_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Partner_Requirement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass Partner required on Quote. Used as a bypass in Required for Approval Flow. SS-8930.</description>
    <inlineHelpText>Check this box to wave the Partner requirement and submit Quote as direct.</inlineHelpText>
    <label>Bypass Partner Requirement</label>
    <type>Checkbox</type>
</CustomField>