objects/SBQQ__Quote__c/fields/CA_not_Required__c.field-meta.xml
<CustomField>
    <fullName>CA_not_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set this field to TRUE to create a quote prior to linking an approved Deal Registration.  This field is tracked and should only be used for approved use cases.</inlineHelpText>
    <label>Collaboration Agreement Override</label>
    <type>Checkbox</type>
</CustomField>