objects/SBQQ__Quote__c/fields/Calculated_AI_Credits__c.field-meta.xml
<CustomField>
    <fullName>Calculated_AI_Credits__c</fullName>
    <label>Calculated AI Credits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>