objects/SBQQ__Quote__c/fields/Case_Study__c.field-meta.xml
<CustomField>
    <fullName>Case_Study__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Participate in a co-authored case study detailing the benefits of Tanium’s Products and/or Services to Customer, authored at Tanium’s expense</inlineHelpText>
    <label>Case Study</label>
    <type>Checkbox</type>
</CustomField>