objects/SBQQ__Quote__c/fields/Changes_from_Previous_Quote__c.field-meta.xml
<CustomField>
    <fullName>Changes_from_Previous_Quote__c</fullName>
    <description>Field requested by the Deal Desk team to help streamline the quote process. Jira ticket SS-5709</description>
    <inlineHelpText>Please select a value to describe what changes were made from the quote prior to this one</inlineHelpText>
    <label>Changes from Previous Quote</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Added Pricing Incentive</fullName>
            </value>
            <value>
                <fullName>Changes in Products and/or Quantity</fullName>
            </value>
            <value>
                <fullName>No previous quote</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>