objects/SBQQ__Quote__c/fields/Changes_from_Previous_Quote_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Changes_from_Previous_Quote_Explanation__c</fullName>
    <description>Field requested by the Deal Desk team to help streamline the quote process. Jira ticket SS-5709</description>
    <inlineHelpText>Please give more information for the choice that was made in the Changes from Previous Quote field</inlineHelpText>
    <label>Changes from Previous Quote Explanation</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>