objects/SBQQ__Quote__c/fields/Chronicle_Discount__c.field-meta.xml
<CustomField>
    <fullName>Chronicle_Discount__c</fullName>
    <label>DEPRECATED - Chronicle Discount</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>