objects/SBQQ__Quote__c/fields/Committed_Term__c.field-meta.xml
<CustomField>
    <fullName>Committed_Term__c</fullName>
    <formula>SBQQ__SubscriptionTerm__c /12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Committed Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>