objects/SBQQ__Quote__c/fields/Contains_Tan_Fed_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Contains_Tan_Fed_Bundle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used to determine if a Quote Contains any of the following products. Will be filled in by WFR &quot;Contains TAN-FED-BUNDLE&quot;
TAN-FED-OPS-5K-BUNDLE-S
TAN-FED-SEC-5K-BUNDLE-S
TAN-FED-OPSSEC-5K-BUNDLE-S
TAN-FED-OPS-MOD-5K-BUNDLE-S
TAN-FED-SEC-MOD-5K-BUNDLE-S
Only visible to Admins for troubleshooting</description>
    <label>Contains TAN-FED-BUNDLE</label>
    <type>Checkbox</type>
</CustomField>