objects/SBQQ__Quote__c/fields/Contingency_Term__c.field-meta.xml
<CustomField>
    <fullName>Contingency_Term__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This box should be checked for all partners requiring a Single Transaction Reseller Agreement OR any prospective Partners.</inlineHelpText>
    <label>Contingency Term</label>
    <type>Checkbox</type>
</CustomField>