objects/SBQQ__Quote__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <formula>IF(  SBQQ__Partner__c =  NULL , &quot;Direct&quot;, &quot;Indirect&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Type</label>
    <type>Text</type>
</CustomField>