objects/SBQQ__Quote__c/fields/ContractEndDate__c.field-meta.xml
<CustomField>
    <fullName>ContractEndDate__c</fullName>
    <formula>SBQQ__MasterContract__r.SBQQ__ExpirationDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amendment Contract End Date</inlineHelpText>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>