objects/SBQQ__Quote__c/fields/Converge_Discount__c.field-meta.xml
<CustomField>
    <fullName>Converge_Discount__c</fullName>
    <label>DEPRECATED - Converge Discount</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>