objects/SBQQ__Quote__c/fields/Converge_Products_On_the_Quote__c.field-meta.xml
<CustomField>
    <fullName>Converge_Products_On_the_Quote__c</fullName>
    <description>This is field is used to send out an email alert if converge products are added to the quote</description>
    <label>Converge Products On the Quote</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Product_Line__c</field>
        <operation>equals</operation>
        <value>Converge</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>