objects/SBQQ__Quote__c/fields/Count_of_Cloud_Products__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Cloud_Products__c</fullName>
    <inlineHelpText>A count of the quote lines on this quote where the product type is TaaS</inlineHelpText>
    <label>Count of Cloud Products</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Product_Type__c</field>
        <operation>equals</operation>
        <value>TaaS, SaaS</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.SBQQ__EffectiveQuantity__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>