objects/SBQQ__Quote__c/fields/CPQ_Product_Filter_by_Type__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Product_Filter_by_Type__c</fullName>
    <description>Referenced in Search Filter and Action.</description>
    <formula>IF(
AND(
OR( Account_Type__c = &quot;Former Customer&quot;, Account_Type__c = &quot;Prospect&quot;),
NOT( Account_Segment__c = &apos;Public Sector&apos;)), False, True)</formula>
    <label>CPQ Product Filter by Type</label>
    <type>Checkbox</type>
</CustomField>