objects/SBQQ__Quote__c/fields/Create_Contracts__c.field-meta.xml
<CustomField>
    <fullName>Create_Contracts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used in process builder to update Contracted checkbox on Opportunity and thereby creating the contracts with updated start date</description>
    <inlineHelpText>This field is used in process builder to update Contracted checkbox on Opportunity and thereby creating the contracts with updated start date</inlineHelpText>
    <label>Create Contracts</label>
    <type>Checkbox</type>
</CustomField>