objects/SBQQ__Quote__c/fields/CreatedDateDateOnly__c.field-meta.xml
<CustomField>
    <fullName>CreatedDateDateOnly__c</fullName>
    <formula>DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date (Date Only)</label>
    <type>Date</type>
</CustomField>