objects/SBQQ__Quote__c/fields/Current_Seats_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Current_Seats_Purchased__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Used to capture Seats Purchased quantity change for Approval Rule &apos;Seats Purchased Quantity Decreased - Deal Desk&apos;. Populated via Price Rule &apos;Previous Seats Purchased&apos;. SS-11485</description>
    <label>Current Seats Purchased</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>