objects/SBQQ__Quote__c/fields/Customer_Logo__c.field-meta.xml
<CustomField>
    <fullName>Customer_Logo__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Grant Tanium the right to use Customer’s logo, trademark and any tradenames on Tanium’s customer list(s), websites, presentations, or marketing collateral</inlineHelpText>
    <label>Customer Logo</label>
    <type>Checkbox</type>
</CustomField>