objects/SBQQ__Quote__c/fields/Customer_Price_ARR__c.field-meta.xml
<CustomField>
    <fullName>Customer_Price_ARR__c</fullName>
    <label>Customer Price ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>