objects/SBQQ__Quote__c/fields/Customer_Success_RVP__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_RVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for approval process. Populated via Apex. Jira Ticket SS-13451</description>
    <label>DEPRECATED - Customer Success RVP</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Quotes (Customer Success RVP)</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>