objects/SBQQ__Quote__c/fields/Customer_SuccessRVP__c.field-meta.xml
<CustomField>
    <fullName>Customer_SuccessRVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for approval process. Populated via Apex. Jira Ticket SS-13451</description>
    <label>Customer Success RVP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>