objects/SBQQ__Quote__c/fields/CustomerQuote__c.field-meta.xml
<CustomField>
    <fullName>CustomerQuote__c</fullName>
    <formula>IF(SBQQ__Partner__c = NULL, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Quote</label>
    <type>Checkbox</type>
</CustomField>