objects/SBQQ__Quote__c/fields/Day_1_ARR_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Day_1_ARR_Start_Date__c</fullName>
    <description>01/08/2025 - Label updated to align with Corporate ARR nomenclature. Jira ticket SS-9438
Denotes the latest start date of quote lines on a Renewal quote</description>
    <inlineHelpText>Denotes the earliest start date of quote lines or expected renewal start date based on renewed contracts</inlineHelpText>
    <label>Sales ARR Start Date Unadjusted</label>
    <type>Date</type>
</CustomField>