objects/SBQQ__Quote__c/fields/Day_1_ARR_Unadjusted_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Day_1_ARR_Unadjusted_Rollup__c</fullName>
    <description>Rolls up Day 1 ARR from the quote lines. The value will then be used by Flow to populate the Day 1 ARR field. Replaces the Day 1 ARR Unadjusted field populated by CPQ price rule. Jira ticket SS-9382.

1/08/2025 - Label updated to align with Corporate ARR nomenclature. Jira ticket SS-9438</description>
    <inlineHelpText>The sum of the ARR of applicable Quote lines that are active on the first day of the term in the Quote</inlineHelpText>
    <label>Sales ARR Unadjusted (Rollup)</label>
    <summarizedField>SBQQ__QuoteLine__c.Day_1_ARR__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Exclude_from_ARR__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>