objects/SBQQ__Quote__c/fields/Deal_Desk_Approval_Needed__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Approval_Needed__c</fullName>
    <description>Checkbox used for approval process. TRUE if criteria is met and Deal Desk approval is needed on the Quote.</description>
    <formula>Has_Conversion_TaaS_Product__c ||
Discover_Check__c ||
Comply_Check__c ||
Reveal_Check__c ||
Max_Trial_Term_Rollup__c &gt; 6 ||
Restricted_SKUs__c &gt; 0 ||
Bursting_Count__c &gt;=1 ||
TEXT(PaymentTypeNew__c) = &apos;Custom&apos; ||
Opportunity_Type__c = &quot;Consulting&quot; ||
Payment_Term_Override__c = TRUE ||
Renewal_Roll_up_Amount__c &gt; 0 ||
ISPICKVAL(SBQQ__Opportunity2__r.Type, &quot;Renewal&quot;) ||
Converge_Discount__c &gt; 0.50 ||
Hardware_Discount__c &gt; 0.15 ||
Account_Contracted_Price__c &gt; 0 ||
((No_of_End_Points_Quote_Score__c &lt;= 20000 &amp;&amp; Chronicle_Discount__c &gt;= 0.35) ||
(No_of_End_Points_Quote_Score__c &gt; 20000 &amp;&amp; No_of_End_Points_Quote_Score__c &lt;= 100000 &amp;&amp; Chronicle_Discount__c &gt;= 0.55) ||
(No_of_End_Points_Quote_Score__c &gt; 100000 &amp;&amp; Chronicle_Discount__c &gt;= 0.60))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Desk Approval Needed</label>
    <type>Checkbox</type>
</CustomField>