objects/SBQQ__Quote__c/fields/Deal_Desk_Approval_Needed_Count__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Approval_Needed_Count__c</fullName>
    <description>Field used to count the number of Quote Lines that have Deal Desk Approval Needed SKU. Used in a Price Rule and Approval Rule.</description>
    <label>Deal Desk Approval Needed Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>