objects/SBQQ__Quote__c/fields/Deal_Desk_Approver__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>used for approval process and populated by trigger</description>
    <label>Deal Desk Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes4</relationshipName>
    <type>Lookup</type>
</CustomField>