objects/SBQQ__Quote__c/fields/Deal_Desk_Approver_Lead_LKUP__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Approver_Lead_LKUP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to identify the Deal Desk Approver Lead, populated via Quote - Before Insert Flow</description>
    <label>Deal Desk Approver Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes8</relationshipName>
    <type>Lookup</type>
</CustomField>