objects/SBQQ__Quote__c/fields/Deploy_SKU__c.field-meta.xml
<CustomField>
    <fullName>Deploy_SKU__c</fullName>
    <label>Deploy SKU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>