objects/SBQQ__Quote__c/fields/Deployment_Exception_Granted__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Exception_Granted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deployment Exception Granted</label>
    <type>Checkbox</type>
</CustomField>