objects/SBQQ__Quote__c/fields/Deployment_Method_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Method_Calculated__c</fullName>
    <formula>IF(AND(Count_of_Cloud_Products__c &gt; 0, Count_of_OnPrem_Products__c &gt; 0), &apos;Hybrid&apos;, IF (Count_of_Cloud_Products__c &gt; 0, &apos;Cloud&apos;, IF (Count_of_OnPrem_Products__c &gt; 0, &apos;OnPrem&apos;, NULL)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field will be set based on the product type of the quote lines related to this quote. This value is used at the account level by the Customer Experience team to drive activities in Gainsight</inlineHelpText>
    <label>Deployment Method (Calculated)</label>
    <type>Text</type>
</CustomField>