objects/SBQQ__Quote__c/fields/Discount_Config__c.field-meta.xml
<CustomField>
    <fullName>Discount_Config__c</fullName>
    <description>Discount value to be set at Quote hearder</description>
    <label>DEPRECATED - Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>