objects/SBQQ__Quote__c/fields/Discount_Exception__c.field-meta.xml
<CustomField>
    <fullName>Discount_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discount Exception</label>
    <type>Checkbox</type>
</CustomField>