objects/SBQQ__Quote__c/fields/Discount_Guidance__c.field-meta.xml
<CustomField>
    <fullName>Discount_Guidance__c</fullName>
    <formula>HYPERLINK(&quot;https://tanium.sharepoint.com/sites/GTMHub-Deal%20Desk/SitePages/Discount-Guidance.aspx?source=https%3a//tanium.sharepoint.com/sites/GTMHub-Deal%2520Desk/SitePages/Forms/ByAuthor.aspx&quot;, &quot;Click here for discount guidance matrices&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Scoring matrices based on Region, Deal Size, and Discount</inlineHelpText>
    <label>Discount Guidance</label>
    <type>Text</type>
</CustomField>