objects/SBQQ__Quote__c/fields/Discount_Tier__c.field-meta.xml
<CustomField>
    <fullName>Discount_Tier__c</fullName>
    <description>Discount Tier based on Opportunity Owner</description>
    <formula>IF( SBQQ__Opportunity2__r.Owner.Level_2__c =&quot;Federal&quot;,1,IF(SBQQ__Opportunity2__r.Owner.Level_2__c =&quot;US and Canada&quot;,4,IF(SBQQ__Opportunity2__r.Owner.Level_2__c =&quot;North Asia&quot;,2,IF(SBQQ__Opportunity2__r.Owner.Level_3__c  =&quot;ANZ&quot;,3,IF(SBQQ__Opportunity2__r.Owner.Level_2__c =&quot;South Asia&quot;,2,IF(SBQQ__Opportunity2__r.Owner.Level_2__c =&quot;EMEA&quot;,3,4))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Partner Program Discount Tier / Region based on Opportunity Owner</inlineHelpText>
    <label>DEPRECATED - Discount Tier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>