objects/SBQQ__Quote__c/fields/Display_Promo_Column_PDF__c.field-meta.xml
<CustomField>
    <fullName>Display_Promo_Column_PDF__c</fullName>
    <description>Reference in Quote Template.  Controls whether to show or hid Promo Column.</description>
    <formula>IF( 
 OR( 
  Promotion_Exist__c &gt;0,
  Bursting_Count__c &gt; 0,
  BurstingCount__c &gt; 0,
  FOC_Count__c &gt; 0,
  Includes_Trial_Product_Count__c &gt;0),True, 
False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Promo Column PDF</label>
    <type>Checkbox</type>
</CustomField>