objects/SBQQ__Quote__c/fields/Disti_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Disti_Discount_Percent__c</fullName>
    <description>Stores the partner distribution discount</description>
    <label>Disti Discount Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>