objects/SBQQ__Quote__c/fields/Disti_Discount_Percent_Marketplace__c.field-meta.xml
<CustomField>
    <fullName>Disti_Discount_Percent_Marketplace__c</fullName>
    <defaultValue>(0)</defaultValue>
    <description>Stores the Disti Discount percent when the partner is a Marketplace provider. Jira ticket SS-9205</description>
    <inlineHelpText>Stores the Disti Discount percent when the partner is a Marketplace provider</inlineHelpText>
    <label>Disti Discount Percent - Marketplace</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>