objects/SBQQ__Quote__c/fields/Disti_Renewal_Discount_Percent_Formula__c.field-meta.xml
<CustomField>
    <fullName>Disti_Renewal_Discount_Percent_Formula__c</fullName>
    <description>Calculates the partner distribution renewal discount. Used as a comparison value for the Disti Renewal Discount Percent field</description>
    <formula>IF(AND(SBQQ__Account__r.Sales_Ops_Derived_EP__c  &lt;= 9999), SBQQ__Partner__r.Disti_Renewal_discount_1_9999_Endpoints__c,
IF(AND(SBQQ__Account__r.Sales_Ops_Derived_EP__c &gt;= 10000,SBQQ__Account__r.Sales_Ops_Derived_EP__c &lt; 25000),SBQQ__Partner__r.Disti_Renewal_discount_10_25k_Endpoints__c,
IF(AND(SBQQ__Account__r.Sales_Ops_Derived_EP__c &gt;= 25000,SBQQ__Account__r.Sales_Ops_Derived_EP__c &lt; 40000),SBQQ__Partner__r.Disti_Renewal_discount_25_40k_Endpoints__c,
IF(AND(SBQQ__Account__r.Sales_Ops_Derived_EP__c &gt;= 40000),SBQQ__Partner__r.Disti_Renewal_discount_40K_Endpoints__c,
0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disti Renewal Discount Percent Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>